--- a/GarciaMariaPablo/src/main/resources/templates/global/politica-privacidad.html
+++ b/GarciaMariaPablo/src/main/resources/templates/global/politica-privacidad.html
@@ -98,8 +98,8 @@
                     <li>Otros departamentos de la organización con necesidad legítima de acceso.</li>
                 </ul>
                 <div class="alert alert-info mt-3">
-                    <i class="bi bi-info-circle-fill me-2"></i><span>No se realizan transferencias internacionales fuera
-                        de la UE.</span>
+                    <i class="bi bi-info-circle-fill me-2"></i>
+                    <span>No se realizan transferencias internacionales fuerade la UE.</span>
                 </div>
             </section>
 
