--- a/GarciaMariaPablo/src/main/resources/templates/_fragments/headerPerfil.html
+++ b/GarciaMariaPablo/src/main/resources/templates/_fragments/headerPerfil.html
@@ -2,11 +2,11 @@
     <div sec:authorize="!isAuthenticated()" class="d-flex align-items-center">
         <a href="../global/login.html" th:href="@{/login}" class="btn btn-outline-light me-2" title="Acceder a tu cuenta">
             <i class="bi bi-box-arrow-in-right me-1"></i>
-            <span>Iniciar sesión</span>
+            Iniciar sesión
         </a>
         <a href="/register" th:href="@{/register}" class="btn btn-light" title="Crear una cuenta nueva">
             <i class="bi bi-person-plus me-1"></i>
-            <span>Registrarse</span>
+            Registrarse
         </a>
     </div>
 
@@ -21,13 +21,13 @@
                 <li>
                     <a class="dropdown-item" th:href="@{/dashboard}" href="../global/index.html" title="Ir a tu dashboard">
                         <i class="bi bi-briefcase me-2"></i>
-                        <span>Mi Dashboard</span>
+                        Mi Dashboard
                     </a>
                 </li>
                 <li>
                     <a class="dropdown-item" th:href="@{/perfil}" title="Ir a tu perfil">
                         <i class="bi bi-person me-2"></i>
-                        <span>Mi perfil</span>
+                        Mi perfil
                     </a>
                 </li>
                 <li>
