--- a/GarciaMariaPablo/src/main/resources/templates/error/404.html
+++ b/GarciaMariaPablo/src/main/resources/templates/error/404.html
@@ -46,10 +46,10 @@
             
             <div class="mt-4 pt-3 border-top">
                 <a th:href="@{/}" href="../global/index.html" class="btn btn-primary me-2">
-                    <i class="bi bi-house-door me-1"></i><span>Ir al Inicio</span>
+                    <i class="bi bi-house-door me-1"></i>Ir al Inicio
                 </a>
                 <a th:href="@{/dashboard}" href="../global/index.html" class="btn btn-primary me-2">
-                    <i class="bi bi-briefcase me-1"></i> <span>Ir al dashboard</span>
+                    <i class="bi bi-briefcase me-1"></i> Ir al dashboard
                 </a>
             </div>
         </div>
