--- a/GarciaMariaPablo/src/main/resources/templates/global/_fragments/header.html
+++ b/GarciaMariaPablo/src/main/resources/templates/global/_fragments/header.html
@@ -80,11 +80,11 @@
                     <a href="../global/login.html" th:href="@{/login}" class="btn btn-outline-light"
                         title="Acceder a tu cuenta">
                         <i class="bi bi-box-arrow-in-right me-1"></i>
-                        <span>Iniciar sesión</span>
+                        Iniciar sesión
                     </a>
                     <a href="/register" th:href="@{/register}" class="btn btn-light" title="Crear una cuenta nueva">
                         <i class="bi bi-person-plus me-1"></i>
-                        <span>Registrarse</span>
+                        Registrarse
                     </a>
                 </div>
             </div>
