--- a/GarciaMariaPablo/src/main/resources/templates/global/login.html
+++ b/GarciaMariaPablo/src/main/resources/templates/global/login.html
@@ -51,7 +51,7 @@
                     <div class="d-grid">
                         <!-- No se usa <input type="submit"> porque incluye un icono junto al texto -->
                         <button type="submit" class="btn btn-main text-light">
-                            <i class="bi bi-box-arrow-in-right me-1"></i> <span>Acceder</span>
+                            <i class="bi bi-box-arrow-in-right me-1"></i> Acceder
                         </button>
                     </div>
                 </form>
